# blackjack-simulator

./: .gitignore  LICENSE  README.md  TODO  blackjack-simulator.cabal  blackjack-simulator.prof  haskell-blackjack.cabal  hlint.txt  run.sh
main/: ErrorFilter.hs  FuzzyChecker.hs  InvariantsChecker.hs  Main.hs  RandomnessChecker.hs
res/: functions.sql  initialize.sql
setup/: ubuntu_install_postgres_dependencies.sh
src/: Cards.hs  Main.hs
src/Jakway/Blackjack/: AI.hs  CardOps.hs  Cards.hs  Game.hs  Match.hs  Points.hs  ProgMain.hs  Result.hs  Util.hs  Visibility.hs
src/Jakway/Blackjack/AI/: AI.hs  CardCounting.hs
src/Jakway/Blackjack/IO/: Action.hs  Database.hs  DatabaseCommon.hs  DatabaseConnection.hs  DatabaseReads.hs  DatabaseWrites.hs  TableNames.hs
src/Jakway/Blackjack/IO/RDBMS/: Postgres.hs  SQLite.hs
src/Jakway/Blackjack/Interface/: Config.hs  Options.hs
src/Jakway/Blackjack/Invariants/: Checks.hs
test/: Test-Main.hs  TestMain.hs
test/Jakway/Blackjack/Fuzzy/: Checks.hs  Options.hs
test/Jakway/Blackjack/Random/: Checks.hs  Options.hs
test/Jakway/Blackjack/Tests/: Constants.hs  DatabaseTests.hs  GameTests.hs
test/Jakway/Blackjack/Tests/AITests/: BasicPlayerTests.hs
test/Jakway/Blackjack/Tests/DatabaseTests/: BasicTests.hs  Common.hs  MultiTableTests.hs
test/Jakway/Blackjack/Tests/IntegrationTests/: MainTests.hs  MatchTests.hs
